@@ -1,7 +1,5 @@
 package uk.gov.hmcts.cmc.claimstore.services.ccd.callbacks.caseworker;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Service;
@@ -29,7 +27,7 @@ import static uk.gov.hmcts.cmc.ccd.domain.CaseEvent.REVIEW_JUDGE_COMMENTS;
 public class ReviewJudgeCommentsCallbackHandler extends CallbackHandler {
 
     private static final List<CaseEvent> EVENTS = Collections.singletonList(REVIEW_JUDGE_COMMENTS);
-    private static final List<Role> ROLES = ImmutableList.of(Role.CASEWORKER);
+    private static final List<Role> ROLES = List.of(Role.CASEWORKER);
 
     private final CaseDetailsConverter caseDetailsConverter;
 
@@ -40,7 +38,7 @@ public class ReviewJudgeCommentsCallbackHandler extends CallbackHandler {
 
     @Override
     protected Map<CallbackType, Callback> callbacks() {
-        return ImmutableMap.of(CallbackType.ABOUT_TO_SUBMIT, this::unassign);
+        return Map.of(CallbackType.ABOUT_TO_SUBMIT, this::unassign);
     }
 
     private CallbackResponse unassign(CallbackParams callbackParams) {
